--- a/tutorials/01_get_started.ipynb
+++ b/tutorials/01_get_started.ipynb
@@ -8,11 +8,11 @@
     "\n",
     "## Overview\n",
     "\n",
-    "🚀 This tutorial demonstrates a minimal application of XRFeitoria. By the end of this tutorial, you will be able to:\\n\",\n",
+    "🚀 This tutorial demonstrates a minimal application of XRFeitoria. By the end of this tutorial, you will be able to:\n",
     "- Open Blender/Unreal Engine by XRFeitoria\n",
     "- Import a mesh\n",
     "- Add a camera\n",
-    "- Render the mesh and save the image"
+    "- Render images and get annotations of the mesh"
    ]
   },
   {
@@ -53,10 +53,10 @@
     "# Replace with your executable path\n",
     "\n",
     "# Blender\n",
-    "# engine_exec_path = 'D:/Program Files/Blender Foundation/Blender 3.3/blender.exe'\n",
+    "engine_exec_path = 'D:/Program Files/Blender Foundation/Blender 3.3/blender.exe'\n",
     "\n",
     "# Unreal Engine\n",
-    "engine_exec_path = 'D:/Program Files/Epic Games/UE_5.1/Engine/Binaries/Win64/UnrealEditor-Cmd.exe'"
+    "# engine_exec_path = 'D:/Program Files/Epic Games/UE_5.1/Engine/Binaries/Win64/UnrealEditor-Cmd.exe'"
    ]
   },
   {
@@ -113,18 +113,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import shutil\n",
     "from xrfeitoria.utils.downloader import download\n",
     "\n",
     "# Download the Koupan-chan model\n",
-    "kc_path = download('http://file.bj.zoe.sensetime.com/resources/meihaiyi/xrfeitoria/assets/koupen_chan.fbx', dst_dir=\"./tutorial01/assets/\")"
+    "kc_path = download('http://file.bj.zoe.sensetime.com/resources/meihaiyi/xrfeitoria/assets/koupen_chan/koupen_chan.fbx', dst_dir=\"./tutorial01/assets/\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Import the .obj file to create an ``Actor`` instance.\n",
+    "Import the .fbx file to create an ``Actor`` instance.\n",
     "\n",
     "``Actor`` is the container of a mesh. By using ``Actor``, you can place a mesh in the space and set its transform data (location, rotation and scale)."
    ]
@@ -143,14 +142,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Switch to the engine window, and you can see the spot has been imported. The space to place the ``Actor``s is called ``Level``. ``Level`` is a container of all ``Actor``s. You can add, remove, or modify ``Actor``s in the `Level`."
+    "Switch to the engine window, and you can see the spot has been imported. The space to place the ``Actor``s is called ``Level``. You can add, remove, or modify ``Actor``s in the `Level`."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you use ``Unreal Engine``, the final step before rendering is to save the ``Level``."
+    "If you use ``Unreal Engine``, the ``Level`` should be saved after you modify it."
    ]
   },
   {
@@ -172,8 +171,8 @@
     "\n",
     "``Sequence`` is a multifunctional class in XRFeitoria. It can be used for:\n",
     "- rendering\n",
-    "- adding transform keys to ``Actor``\n",
-    "- grouping different ``Actor``s\n",
+    "- adding transform keys\n",
+    "- grouping different objects\n",
     "\n",
     "Here, we use it for rendering. Firstly we will add a ``Camera`` in the ``Sequence`` by using the function `spawn_camera` and set its location, rotation, and focal length. Then, we will add a render job to the renderer and set the render settings by using the function ``add_to_renderer``."
    ]
@@ -188,27 +187,25 @@
     "from xrfeitoria.data_structure.models import RenderPass\n",
     "\n",
     "# Use `with` statement to create a sequence, and it will be automatically close the sequence after the code block is executed.\n",
-    "with xf_runner.Sequence.new(seq_name=\"MySequence\", replace=True) as seq:\n",
+    "sequence_name = 'MySequence'\n",
+    "with xf_runner.Sequence.new(seq_name=sequence_name) as seq:\n",
     "\n",
     "    # Add a camera and make it look at the spot\n",
     "    camera_location = (0.0, -0.8, 0.0)\n",
     "    camera_rotation = xf_runner.utils.get_rotation_to_look_at(location=camera_location, target=actor_kc.location)\n",
-    "    seq.spawn_camera(location=camera_location, rotation=camera_rotation, fov=90)\n",
+    "    camera = seq.spawn_camera(location=camera_location, rotation=camera_rotation, fov=90)\n",
     "\n",
     "    # Add a render job to renderer\n",
     "    # In render job, you can specify the output path, resolution, render passes, etc.\n",
     "    # The output path is the path to save the rendered data.\n",
     "    # The resolution is the resolution of the rendered image.\n",
-    "    # The render passes define what kind of data you want to render, such as img, depth, normal, etc.\n",
+    "    # The render passes define what kind of data you want to render, such as img, mask, normal, etc.\n",
     "    # and what kind of format you want to save, such as png, exr, etc.\n",
-    "    # Here we render all the annotations we support.\n",
     "    seq.add_to_renderer(\n",
     "        output_path=f'./tutorial01/outputs/{render_engine}/',\n",
     "        resolution=(1280, 720),\n",
     "        render_passes=[RenderPass('img', 'png'),\n",
     "                       RenderPass('mask', 'exr'),\n",
-    "                       RenderPass('depth', 'exr'),\n",
-    "                       RenderPass('flow', 'exr'),\n",
     "                       RenderPass('normal', 'exr'),\n",
     "                       RenderPass('diffuse', 'exr')]\n",
     "    )"
@@ -220,7 +217,7 @@
    "source": [
     "## 5. Render\n",
     "\n",
-    "Use the following code to render and save the images to the ``output_path`` you set in ``seq.add_to_renderer`` above."
+    "Use the following cell to render and save the images to the ``output_path`` you set in ``seq.add_to_renderer`` above."
    ]
   },
   {
@@ -236,7 +233,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check the ``output_path``, and you can see the rendered images and various annotations."
+    "Check the ``output_path``, and you can see the rendered images and various annotations. The following code shows the rendered image and the corresponding annotations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Install these packages for visualizing the rendered data\n",
+    "%pip install Imath\n",
+    "%pip install OpenEXR\n",
+    "%pip install flow_vis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "from xrfeitoria.utils.reader import XRFeitoriaReader\n",
+    "\n",
+    "xf_viwer = XRFeitoriaReader(sequence_dir=f'./tutorial01/outputs/{render_engine}/{sequence_name}/')\n",
+    "img = xf_viwer.get_img(camera_name=camera.name, frame=0)\n",
+    "diffuse = xf_viwer.get_diffuse(camera_name=camera.name, frame=0)\n",
+    "mask = xf_viwer.get_mask(camera_name=camera.name, frame=0)\n",
+    "normal = xf_viwer.get_normal(camera_name=camera.name, frame=0)\n",
+    "\n",
+    "plt.figure(figsize=(20, 20))\n",
+    "\n",
+    "plt.subplot(1, 4, 1)\n",
+    "plt.imshow(img)\n",
+    "plt.axis('off')\n",
+    "plt.title('img')\n",
+    "\n",
+    "plt.subplot(1, 4, 2)\n",
+    "plt.imshow(diffuse)\n",
+    "plt.axis('off')\n",
+    "plt.title('diffuse')\n",
+    "\n",
+    "plt.subplot(1, 4, 3)\n",
+    "plt.imshow(mask)\n",
+    "plt.axis('off')\n",
+    "plt.title('mask')\n",
+    "\n",
+    "plt.subplot(1, 4, 4)\n",
+    "plt.imshow(normal)\n",
+    "plt.axis('off')\n",
+    "plt.title('normal')"
    ]
   },
   {
@@ -270,7 +317,7 @@
    "source": [
     "## 7. Conclusion\n",
     "\n",
-    "In this tutorial, we imported a mesh and rendered an image for it. To accomplish this procedure, essential steps should be taken:\n",
+    "In this tutorial, we imported a mesh and rendered images for it. To accomplish this procedure, essential steps should be taken:\n",
     "- Initialization\n",
     "- Import an `Actor`\n",
     "- Add a `Sequence`\n",
