--- a/tutorials/02_add_transform_keys.ipynb
+++ b/tutorials/02_add_transform_keys.ipynb
@@ -40,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then similar as Tutorial 01, specify your engine path and initialize XRFeitoria."
+    "Then, similar as Tutorial 01, specify your engine path and initialize XRFeitoria."
    ]
   },
   {
@@ -163,7 +163,7 @@
    "source": [
     "Switch to the engine window, and you can see the meshes has been imported.\n",
     "\n",
-    "Then, we adjust the scale of the Actors to make their sizes equal to 0.3m."
+    "Then, we adjust the scale of the Actors to make their sizes equal to 0.2m."
    ]
   },
   {
@@ -172,7 +172,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "actor_size = 0.3\n",
+    "actor_size = 0.2\n",
     "for actor in actors:\n",
     "    actor.scale = (actor_size / max(actor.dimensions), ) * 3"
    ]
@@ -181,7 +181,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you use ``Unreal Engine``, the final step before rendering is to save the ``Level``. You can save the ``Level`` by"
+    "If you use ``Unreal Engine``, the ``Level`` should be saved after you modify it."
    ]
   },
   {
@@ -240,8 +240,8 @@
     "for i in range(frame_num):\n",
     "\n",
     "    # Generate random locations by Poisson Disk Sampling\n",
-    "    # The minimum distance between two actors is set to be 0.8 * actor_size\n",
-    "    posson_engine = qmc.PoissonDisk(d=2, radius=actor_size * 0.8)\n",
+    "    # The minimum distance between two actors is set to be `actor_size` we defined before\n",
+    "    posson_engine = qmc.PoissonDisk(d=2, radius=actor_size)\n",
     "    sample_location = posson_engine.random(len(actors))\n",
     "    \n",
     "    # Set the transform keys for each actor\n",
@@ -294,7 +294,8 @@
     "\n",
     "# Use the `with` statement to create a sequence, and it will be automatically close the sequence after the code block is executed.\n",
     "# The argument `seq_length` controls the number of frames to be rendered. \n",
-    "with xf_runner.Sequence.new(seq_name=\"MySequence\", seq_length=frame_num) as seq:\n",
+    "sequence_name = 'MySequence'\n",
+    "with xf_runner.Sequence.new(seq_name=sequence_name, seq_length=frame_num) as seq:\n",
     "    ##############################\n",
     "    ##### Add transform keys #####\n",
     "    ##############################\n",
@@ -312,7 +313,7 @@
     "    # Add a camera and make it look at the specified location\n",
     "    camera_location = (0.5, -3.0, 0.5)\n",
     "    camera_rotation = xf_runner.utils.get_rotation_to_look_at(location=camera_location, target=(0.5, 0.0, 0.5))\n",
-    "    seq.spawn_camera(location=camera_location, rotation=camera_rotation, fov=45)\n",
+    "    camera = seq.spawn_camera(location=camera_location, rotation=camera_rotation, fov=45)\n",
     "\n",
     "    # Add a render job to renderer\n",
     "    # In render job, you can specify the output path, resolution, render passes, etc.\n",
@@ -323,7 +324,12 @@
     "    seq.add_to_renderer(\n",
     "        output_path=f'./tutorial02/outputs/{render_engine}/',\n",
     "        resolution=(1280, 720),\n",
-    "        render_passes=[RenderPass('img', 'png')],\n",
+    "        render_passes=[RenderPass('img', 'png'),\n",
+    "                       RenderPass('mask', 'exr'),\n",
+    "                       RenderPass('normal', 'exr'),\n",
+    "                       RenderPass('diffuse', 'exr'),\n",
+    "                       RenderPass('depth', 'exr'),\n",
+    "                       RenderPass('flow', 'exr')],\n",
     "    )"
    ]
   },
@@ -350,10 +356,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check the ``output_path``, and you can see the rendered images like this:\n",
+    "Check the ``output_path``, and you can see the rendered images and their annotations. Visualize the images and annotations by the following code."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "from xrfeitoria.utils.reader import XRFeitoriaReader\n",
     "\n",
-    "![](http://file.bj.zoe.sensetime.com/resources/meihaiyi/xrfeitoria/pics/tutorial/02/blender/outputs.png)\n",
-    "![](http://file.bj.zoe.sensetime.com/resources/meihaiyi/xrfeitoria/pics/tutorial/02/blender/outputs.png)"
+    "xf_viwer = XRFeitoriaReader(sequence_dir=f'./tutorial02/outputs/{render_engine}/{sequence_name}/')\n",
+    "\n",
+    "for i in range(frame_num):\n",
+    "    img = xf_viwer.get_img(camera_name=camera.name, frame=i)\n",
+    "    mask = xf_viwer.get_mask(camera_name=camera.name, frame=i)\n",
+    "    normal = xf_viwer.get_normal(camera_name=camera.name, frame=i)\n",
+    "    diffuse = xf_viwer.get_diffuse(camera_name=camera.name, frame=i)\n",
+    "    depth = xf_viwer.get_depth(camera_name=camera.name, frame=i)\n",
+    "    flow = xf_viwer.get_flow(camera_name=camera.name, frame=i)\n",
+    "\n",
+    "    plt.figure(figsize=(20, 20))\n",
+    "    plt.title(f'Frame {i}')\n",
+    "\n",
+    "    plt.subplot(1, 6, 1)\n",
+    "    plt.imshow(img)\n",
+    "    plt.axis('off')\n",
+    "    plt.title('img')\n",
+    "\n",
+    "    plt.subplot(1, 6, 2)\n",
+    "    plt.imshow(mask)\n",
+    "    plt.axis('off')\n",
+    "    plt.title('mask')\n",
+    "\n",
+    "    plt.subplot(1, 6, 3)\n",
+    "    plt.imshow(normal)\n",
+    "    plt.axis('off')\n",
+    "    plt.title('normal')\n",
+    "\n",
+    "    plt.subplot(1, 6, 4)\n",
+    "    plt.imshow(diffuse)\n",
+    "    plt.axis('off')\n",
+    "    plt.title('diffuse')\n",
+    "\n",
+    "    plt.subplot(1, 6, 5)\n",
+    "    plt.imshow(depth)\n",
+    "    plt.axis('off')\n",
+    "    plt.title('depth')\n",
+    "\n",
+    "    plt.subplot(1, 6, 6)\n",
+    "    plt.imshow(flow)\n",
+    "    plt.axis('off')\n",
+    "    plt.title('flow')"
    ]
   },
   {
