--- a/tutorials/03_skeletal_mesh_and_multiview_rendering.ipynb
+++ b/tutorials/03_skeletal_mesh_and_multiview_rendering.ipynb
@@ -46,10 +46,10 @@
     "# Replace with your executable path\n",
     "\n",
     "# Blender\n",
-    "engine_exec_path = 'D:/Program Files/Blender Foundation/Blender 3.3/blender.exe'\n",
+    "# engine_exec_path = 'D:/Program Files/Blender Foundation/Blender 3.3/blender.exe'\n",
     "\n",
     "# Unreal Engine\n",
-    "# engine_exec_path = 'D:/Program Files/Epic Games/UE_5.1/Engine/Binaries/Win64/UnrealEditor-Cmd.exe'"
+    "engine_exec_path = 'D:/Program Files/Epic Games/UE_5.2/Engine/Binaries/Win64/UnrealEditor-Cmd.exe'"
    ]
   },
   {
@@ -71,17 +71,18 @@
     "    # You can also prepare your own project\n",
     "    import shutil\n",
     "    from xrfeitoria.utils.downloader import download\n",
-    "    unreal_project_zip = download(url='https://http://file.bj.zoe.sensetime.com/resources/meihaiyi/xrfeitoria/unreal_project/UE_sample.zip', \n",
-    "                                    dst_dir=\"./tutorial02/assets/\")\n",
-    "    shutil.unpack_archive(filename=unreal_project_zip, extract_dir='./tutorial02/assets/')\n",
+    "    unreal_project_zip = download(url='http://file.bj.zoe.sensetime.com/resources/meihaiyi/xrfeitoria/unreal_project/UE_Sample.zip', \n",
+    "                                    dst_dir=\"./tutorial03/assets/\")\n",
+    "    shutil.unpack_archive(filename=unreal_project_zip, extract_dir='./tutorial03/assets/')\n",
     "\n",
     "    # Open Unreal Engine\n",
     "    render_engine = 'unreal'\n",
     "    xf_runner = xf.init_unreal(exec_path=engine_exec_path, \n",
     "                                background=False, \n",
     "                                new_process=True, \n",
-    "                                project_path='./tutorial02/assets/UE_sample/UE_sample.uproject',\n",
-    "                                replace_plugin=True, dev_plugin=True)"
+    "                                project_path='./tutorial03/assets/UE_sample/UE_sample.uproject',\n",
+    "                                replace_plugin=True,\n",
+    "                                dev_plugin=True)"
    ]
   },
   {
@@ -228,7 +229,8 @@
     "\n",
     "# Use `with` statement to create a sequence, and it will be automatically close the sequence after the code block is executed.\n",
     "# The argument `seq_length` controls the number of frames to be rendered. \n",
-    "with xf_runner.Sequence.new(seq_name=\"MySequence\", seq_length=10) as seq:\n",
+    "sequence_name = 'MySequence'\n",
+    "with xf_runner.Sequence.new(seq_name=sequence_name, seq_length=6) as seq:\n",
     "\n",
     "    # Get the bounding boxes of the actors\n",
     "    actor1_bbox = actor1.bound_box\n",
@@ -294,7 +296,12 @@
     "    seq.add_to_renderer(\n",
     "        output_path=f'./tutorial03/outputs/{render_engine}/',\n",
     "        resolution=(1280, 720),\n",
-    "        render_passes=[RenderPass('img', 'png')]\n",
+    "        render_passes=[RenderPass('img', 'png'),\n",
+    "                       RenderPass('mask', 'exr'),\n",
+    "                       RenderPass('depth', 'exr'),\n",
+    "                       RenderPass('flow', 'exr'),\n",
+    "                       RenderPass('normal', 'exr'),\n",
+    "                       RenderPass('diffuse', 'exr')]\n",
     "    )"
    ]
   },
@@ -322,6 +329,33 @@
    "metadata": {},
    "source": [
     "Check the ``output_path``, and you can see that for the frame *i*, the image rendered by the moving camera is the same as the image rendered by the *i*th static camera. For example, the ``moving_camera/0002.png`` is the same as the ``static_camera_2/0002.png``."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "from xrfeitoria.utils.reader import XRFeitoriaReader\n",
+    "\n",
+    "xf_viewer = XRFeitoriaReader(sequence_dir=f'./tutorial03/outputs/{render_engine}/{sequence_name}/')\n",
+    "\n",
+    "moving_camera_img = xf_viewer.get_img(camera_name='moving_camera', frame=2)\n",
+    "static_camera_img = xf_viewer.get_img(camera_name='static_camera_2', frame=2)\n",
+    "\n",
+    "plt.figure(figsize=(20, 20))\n",
+    "\n",
+    "plt.subplot(1, 2, 1)\n",
+    "plt.imshow(moving_camera_img)\n",
+    "plt.axis('off')\n",
+    "plt.title('moving_camera/0002.png')\n",
+    "\n",
+    "plt.subplot(1, 2, 2)\n",
+    "plt.imshow(static_camera_img)\n",
+    "plt.axis('off')\n",
+    "plt.title('static_camera_2/0002.png')"
    ]
   },
   {
