--- a/tutorials/01_get_started.ipynb
+++ b/tutorials/01_get_started.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,7 @@
     "- Add a `Camera`\n",
     "- Render\n",
     "\n",
-    "It is worth mention that while Sequences do not directly perform rendering, the creation of Sequences is necessary for adding cameras and submitting rendering jobs. And the detailed definations of the classes [`Actor`](https://xrfeitoria.readthedocs.io/en/latest/apis/actor.html), [`Camera`](https://xrfeitoria.readthedocs.io/en/latest/apis/camera.html), and [`Sequence`](https://xrfeitoria.readthedocs.io/en/latest/apis/sequence.html) can be referred to the documentation."
+    "It is worth mention that while Sequences do not directly perform rendering, the creation of Sequences is necessary for adding cameras and submitting rendering jobs. And the detailed definitions of the classes [`Actor`](https://xrfeitoria.readthedocs.io/en/latest/apis/actor.html), [`Camera`](https://xrfeitoria.readthedocs.io/en/latest/apis/camera.html), and [`Sequence`](https://xrfeitoria.readthedocs.io/en/latest/apis/sequence.html) can be referred to the documentation."
    ]
   }
  ],
