--- a/tutorials/02_add_transform_keys.ipynb
+++ b/tutorials/02_add_transform_keys.ipynb
@@ -213,7 +213,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">``Transform keys`` record the tranformation (location, rotation and scale) of an ``Actor`` at specific frames, and the tranformation between two adjacent keys will be interpolated by the specified interpolation method. By adding transform keys, you can render multiple poses of an ``Actor``.\n",
+    ">``Transform keys`` record the transformation (location, rotation and scale) of an ``Actor`` at specific frames, and the transformation between two adjacent keys will be interpolated by the specified interpolation method. By adding transform keys, you can render multiple poses of an ``Actor``.\n",
     ">In ``XRFeitoria``, transform keys are always stored in a list, and the members of the list are [``SequenceTransformKey``](https://xrfeitoria.readthedocs.io/en/latest/apis/generated/xrfeitoria.data_structure.models.SequenceTransformKey.html) object.\n",
     "\n",
     "Firstly, we randomly generate some transform keys for each actors."
