--- a/tutorials/03_skeletal_mesh_and_multiview_rendering.ipynb
+++ b/tutorials/03_skeletal_mesh_and_multiview_rendering.ipynb
@@ -15,7 +15,7 @@
     "- Set ``Actor``s' location and scale in the ``Level``\n",
     "- Create a `Sequence` for rendering\n",
     "- Add multiple static cameras in the `Sequence`\n",
-    "- Add a moving camera with transfrom keys in the `Sequence`\n",
+    "- Add a moving camera with transform keys in the `Sequence`\n",
     "- Render and save images"
    ]
   },
